feat(bacnet): implemented some more property mappings and defaulted all properties to a validation error